--- a/scss/sidebar.scss
+++ b/scss/sidebar.scss
@@ -80,6 +80,7 @@
                     
                     .fa-file-invoice-dollar, 
                     .fa-users,
+                    .fa-euro-sign,
                     .fa-user{
                         font-size: 1.1rem;
                         color: v.$fourth;
