--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -69,7 +69,7 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   display: inline-block;
   padding: 0.85rem 1.5rem;
 }
@@ -98,13 +98,13 @@
   margin-right: 1.5rem;
 }
 .set-profile-picture .media .btn-upload-pic {
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   color: #ffffff;
   font-size: 1rem;
   padding: 0.5rem 1rem;
 }
 .set-profile-picture .media .delete-bttn {
-  background: #727DFF;
+  background: #A020F0;
   display: block;
   margin-top: 0.5rem;
 }
@@ -142,7 +142,7 @@
 .customer-profile-info .set-profile-picture .media span {
   width: 10rem;
   height: 10rem;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   border-radius: 50%;
   color: #ffffff;
   font-size: 4rem;
@@ -167,7 +167,7 @@
 }
 .customer-profile-info .set-profile-picture .role-label .badge {
   font-size: 0.9rem;
-  background-color: #727DFF !important;
+  background-color: #A020F0 !important;
 }
 .customer-profile-info .form-group {
   margin-bottom: 0.5rem !important;
@@ -314,7 +314,7 @@
 .table-avatar span {
   width: 3rem;
   height: 3rem;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   border-radius: 50%;
   color: #ffffff;
   font-size: 1rem;
@@ -339,7 +339,7 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: #727DFF;
+  background: #A020F0;
   display: inline-block;
   padding: 0.85rem 1.5rem;
   padding: 0.3rem 1rem;
@@ -349,7 +349,7 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   display: inline-block;
   padding: 0.85rem 1.5rem;
   padding: 0.3rem 1rem;
@@ -480,7 +480,7 @@
   margin-top: 0.4rem;
 }
 .chat-box-wrap .message-list-wrap .sender {
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   font-size: 0.9rem;
   font-weight: 500;
   color: #ffffff;
@@ -511,12 +511,50 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: #d90d77;
   display: inline-block;
   padding: 0.85rem 1.5rem;
 }
 .chat-box-wrap form .form-submit .btn-submit:hover {
-  opacity: 0.7;
+  background: #fa9210;
+}
+
+.productss-list-box h1 {
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.productss-list-box h2 {
+  font-size: 3rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.productss-list-box h4,
+.productss-list-box h3 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.productss-list-box h5 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.productss-list-box h6 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #2d3958;
+  line-height: 140%;
+}
+.productss-list-box p {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #000000;
+  line-height: 140%;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
