--- a/public/assets/css/sidebar.css
+++ b/public/assets/css/sidebar.css
@@ -22,7 +22,7 @@
 .sidebar-wrapper .header-user-box .media span {
   width: 2.1rem;
   height: 2.1rem;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   border-radius: 50%;
   margin-right: 1rem;
   color: #ffffff;
@@ -75,6 +75,7 @@
 }
 .sidebar-wrapper .sidebar-nav-area .menubar .menu-item .menu-link .fa-file-invoice-dollar,
 .sidebar-wrapper .sidebar-nav-area .menubar .menu-item .menu-link .fa-users,
+.sidebar-wrapper .sidebar-nav-area .menubar .menu-item .menu-link .fa-euro-sign,
 .sidebar-wrapper .sidebar-nav-area .menubar .menu-item .menu-link .fa-user {
   font-size: 1.1rem;
   color: #8C8FAE;
@@ -112,12 +113,12 @@
   top: 0;
   width: 4px;
   height: 0%;
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   box-shadow: 3px 22px 50px -2px #DEE3EB;
   transition: all linear 0.3s;
 }
 .sidebar-wrapper .sidebar-nav-area .menubar .menu-item .menu-link:hover {
-  background: linear-gradient(98.03deg, #d90d77 18.68%, #fa9210 88.52%);
+  background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
