--- a/scss/util/_variabls.scss
+++ b/scss/util/_variabls.scss
@@ -7,14 +7,15 @@ $border: #dfe5f1;
 $third: #DEE3EB;
 $fourth: #8C8FAE;
 $orang: #fa9210;
-$gdbg: linear-gradient(98.03deg, $primary 18.68%, $orang 88.52%); 
+// $gdbg: linear-gradient(98.03deg, $primary 18.68%, $orang 88.52%); 
+$gdbg: linear-gradient(132deg,#4c60ff 20%,#2b91fe); 
 $bxs: 3px 22px 50px -2px $third;
 $mbxs: inset 0px -1px 0px $border;
 $pm-y: 4rem 0;
 $pm-b: 2rem;
 $menuclr: #2d3958;
 $grn: #34A853;
-$blu: #727DFF;
+$blu: #A020F0;
 $btnbg: #2d3958;
 $bga: rgba(235, 240, 249, 0.6);
 $newbrdr: #A5B4CB;
