--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -102,7 +102,7 @@
   margin-bottom: 0.8rem;
   font-size: 1rem;
   font-weight: 700;
-  color: #d90d77;
+  color: #4c60ff;
   line-height: 140%;
   display: flex;
   align-items: center;
@@ -199,8 +199,8 @@
   color: #A5B4CB;
 }
 .course-outline-box .accordion .accordion-item span.numbering.active {
-  border-color: #d90d77;
-  color: #d90d77;
+  border-color: #4c60ff;
+  color: #4c60ff;
 }
 .course-outline-box .accordion .accordion-item .accordion-button {
   background: transparent;
@@ -252,7 +252,7 @@
 .add_module_bttn {
   padding: 10px 15px;
   border-radius: 1.6rem;
-  background: #d90d77;
+  background: #4c60ff;
   color: #ffffff;
   display: block;
   text-align: center;
@@ -261,7 +261,7 @@
   margin-top: 0.3rem;
 }
 .add_module_bttn:hover {
-  background: #fa9210;
+  background: #2d3958;
 }
 
 .add_lesson_bttn {
@@ -293,13 +293,13 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: #d90d77;
+  background: #4c60ff;
   display: inline-block;
   padding: 0.85rem 1.5rem;
   border-radius: 3rem;
 }
 .content-txt-box .d-flex a:hover {
-  background: #fa9210;
+  background: #2d3958;
 }
 .content-txt-box .d-flex a.min_width {
   min-width: 10rem;
@@ -413,7 +413,7 @@
   line-height: 140%;
 }
 .learning-banners-wrap .media .media-body .addspy-main-title span {
-  color: #2D3958;
+  color: #2b91fe;
 }
 .learning-banners-wrap .media .media-body p {
   font-size: 1rem;
@@ -427,7 +427,7 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: #d90d77;
+  background: #4c60ff;
   display: inline-block;
   padding: 0.85rem 1.5rem;
   border-radius: 3rem;
@@ -435,7 +435,7 @@
   padding-right: 4rem !important;
 }
 .learning-banners-wrap .media .media-body a:hover {
-  background: #fa9210;
+  background: #2d3958;
   color: #000000;
 }
 
