--- a/scss/common.scss
+++ b/scss/common.scss
@@ -201,6 +201,14 @@
             border: 1px solid v.$third;
         }
     }
+    tr{
+        img{
+            width: 3rem;
+            height: 3rem;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+    }
 }
 
 .dataTables_paginate {
