--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -24,7 +24,7 @@
 }
 .total-session-box .d-flex i {
   font-size: 3.2rem;
-  color: #d90d77;
+  color: #4c60ff;
 }
 
 .alert-custom-txt {
@@ -45,7 +45,7 @@
   margin-top: 0.6rem;
 }
 .alert-custom-txt .media a {
-  background: #d90d77;
+  background: #4c60ff;
   color: #ffffff;
   padding: 0.5rem 1rem;
   display: inline-block;
