--- a/public/assets/css/settings.css
+++ b/public/assets/css/settings.css
@@ -29,7 +29,7 @@
   font-weight: 500;
   color: #ffffff;
   line-height: 140%;
-  background: #d90d77;
+  background: #4c60ff;
   display: inline-block;
   padding: 0.85rem 1.5rem;
 }
